<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:inputType="text"
        android:id="@+id/web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/www_facebook_com" />

    <Button
        android:id="@+id/open_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/open_website"
        android:onClick="openWebsite"
        />

    <EditText
        android:inputType="text"
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/golden_gate" />

    <Button
        android:id="@+id/open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="openLocation"
        android:text="@string/open_location" />


    <EditText
        android:inputType="text"
        android:id="@+id/share_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi_everyone" />

    <Button
        android:id="@+id/open_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="openShare"
        android:text="@string/share_text" />


</LinearLayout>